DPNG-8044 Add mising template repository endpoints
DPNG-8044 Add subrouter

DPNG-8044 Added JWT support

DPNG-8044 Remove not working test
